<resources>
    <string name="app_name">Tech World Updates</string>
    <string name="tools">Tools</string>
    <string name="home">Home</string>
    <string name="store">Store</string>
    <string name="profile">Profile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera">Barcode Scanner</string>
    <string name="calculator">Calculator</string>
    <string name="audio">Audio Tools</string>

    <string name="desktop">Desktop</string>
    <string name="laptop">Laptops</string>
    <string name="wifi">Network</string>
    <string name="phone">Phones</string>
    <string name="headphones">Headphones</string>
    <string name="services">Services</string>
    <string name="mouse">Mouse</string>
    <string name="calculator_title">Select an option:</string>
    <string name="calculator_error">Missing values!</string>
    <string name="calculate">Calculate</string>
    <string name="calculator_val1">Insert first value:</string>
    <string name="calculator_val2">Insert second value:</string>
    <string name="calculator_result">Result</string>
    <string name="calculator_sum">Sum</string>
    <string name="calculator_subtract">Subtract</string>
    <string name="calculator_multiply">Multiply</string>
    <string name="calculator_divide">Divide</string>

    <string name="db_val1">Number 1</string>
    <string name="db_val2">Number 2</string>
    <string name="db_operation">Operation</string>
    <string name="db_result">Result</string>
    <string name="db_show_op">Show OP</string>

</resources>