<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/accent"
        tools:context=".tools.CalculatorActivity">

        <EditText
            android:id="@+id/num1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/round_corners"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/calculator_val1"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="@color/secondary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/num2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corners"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/calculator_val2"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="@color/secondary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/num1"
            app:layout_constraintVertical_bias="0.060000002" />

        <Button
            android:id="@+id/calculator_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/calculate"
            android:textColor="@color/secondary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/num2"
            app:layout_constraintStart_toStartOf="@+id/num2"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:layout_constraintVertical_bias="0.120000005" />

        <TextView
            android:id="@+id/result"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@drawable/round_corners"
            android:gravity="center"
            android:hint="@string/calculator_result"
            android:textColor="@color/secondary"
            android:textColorHint="@color/secondary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/calculator_button"
            app:layout_constraintStart_toStartOf="@+id/calculator_button"
            app:layout_constraintTop_toBottomOf="@+id/calculator_button"
            app:layout_constraintVertical_bias="0.13999999" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corners"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/num2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/num2"
            app:layout_constraintTop_toBottomOf="@+id/num2"
            app:layout_constraintVertical_bias="0.120000005">

            <RadioButton
                android:id="@+id/sumarButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/calculator_sum"
                android:textStyle="bold|italic" />

            <RadioButton
                android:id="@+id/restarButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/calculator_subtract"
                android:textStyle="bold|italic" />

            <RadioButton
                android:id="@+id/multiplicarButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/calculator_multiply"
                android:textStyle="bold|italic" />

            <RadioButton
                android:id="@+id/dividirButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/calculator_divide"
                android:textStyle="bold|italic" />

        </RadioGroup>

        <ImageButton
            android:id="@+id/showOp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corners_circle"
            android:padding="5dp"
            app:layout_constraintBottom_toTopOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/data" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/db_show_op"
            android:textColor="@color/secondary"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/secondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/showOp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result"
            app:layout_constraintVertical_bias="1.0">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp">

                    <LinearLayout
                        android:id="@+id/db_table"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal">

                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="5dp"
                                android:layout_weight="1"
                                android:text="@string/db_val1"
                                android:textColor="@color/primary" />

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="5dp"
                                android:text="@string/db_val2"
                                android:textColor="@color/primary" />

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="5dp"
                                android:text="@string/db_operation"
                                android:textColor="@color/primary" />

                            <TextView
                                android:id="@+id/textView6"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="5dp"
                                android:text="@string/db_result"
                                android:textColor="@color/primary" />
                        </LinearLayout>
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>
        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
