<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    tools:context=".menus.ToolsFragment">

    <TextView
        android:id="@+id/tools_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/tools"
        android:textColor="@color/text"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <LinearLayout
        android:id="@+id/row_layout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"

        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:background="@color/primary"
        android:clickable="true"
        android:divider="@drawable/list_item_divider"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="10dp"
        android:showDividers="middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tools_title">

        <ImageView
            android:id="@+id/tool_img1"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/audio" />

        <TextView
            android:id="@+id/tool_name1"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/audio"
            android:textColor="@color/secondary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/tool_caret1"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                android:src="@drawable/caret" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_layout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"

        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:background="@color/primary"
        android:clickable="true"
        android:divider="@drawable/list_item_divider"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="10dp"
        android:showDividers="middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row_layout1">

        <ImageView
            android:id="@+id/tool_img2"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/calculator" />

        <TextView
            android:id="@+id/tool_name2"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/calculator"
            android:textColor="@color/secondary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/tool_caret2"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                android:src="@drawable/caret" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_layout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"

        android:background="@color/primary"
        android:clickable="true"
        android:divider="@drawable/list_item_divider"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="10dp"
        android:showDividers="middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row_layout2">

        <ImageView
            android:id="@+id/tool_img3"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/camera" />

        <TextView
            android:id="@+id/tool_name3"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/camera"
            android:textColor="@color/secondary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/tool_caret3"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/caret" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>